--- a/style.css
+++ b/style.css
@@ -5,6 +5,19 @@
          font-size: 1.1em;
      }
      
+     #logo {
+         float: left;
+         margin-left: 20px;
+         margin-right: -20px;
+         background-color: white;
+         position: relative;
+         border-style: solid;
+         width: 114px;
+         border-color: #71266E;
+         margin-top: -10px;
+         margin-bottom: -20px;
+     }
+     
      #headerpic {
          width: 100%;
      }
@@ -27,17 +40,11 @@
      nav a {
          text-align: center;
          display: block;
+         line-height: 5em;
      }
      
      #section2 {
          background-color: #93A537;
-     }
-     
-     #logo {
-         float: left;
-         padding-right: 50px;
-         margin-left: 15px;
-         margin-right: -75px;
      }
      
      ul {
