--- a/style.css
+++ b/style.css
@@ -1,112 +1,178 @@
-     @import url('https://fonts.googleapis.com/css?family=Rock+Salt');
-     nav {
-         background-color: #93A537;
-         color: #294F6D;
-         font-size: 1.12em;
-     }
-     
-     #logo {
-         float: left;
-         margin-left: 20px;
-         margin-right: -20px;
-         background-color: white;
-         position: relative;
-         border-style: solid;
-         width: 114px;
-         border-color: #71266E;
-         margin-top: -10px;
-         margin-bottom: -20px;
-     }
-     
-     #headerpic {
-         width: 100%;
-     }
-     
-     a {
-         color: #294F6D;
-         text-decoration: none;
-     }
-     
-     nav a:link nav a:visited {
-         color: #294F6D;
-         text-decoration: none;
-     }
-     
-     nav a:hover {
-         background-color: #294F6D;
-         color: #93A537;
-     }
-     
-     nav a {
-         text-align: center;
-         display: block;
-         line-height: 5em;
-     }
-     
-     #section2 {
-         background-color: #93A537;
-     }
-     
-     ul {
-         list-style-type: none;
-         display: flex;
-         line-height: 5.5em;
-         flex-flow: row wrap;
-     }
-     
-     nav li {
-         flex: 1 1 8em;
-     }
-     
-     #img2 {
-         padding-top: 5px;
-         padding-left: 5px;
-         padding-bottom: 2px;
-     }
-     
-     h1,
-     h2,
-     h3,
-     h4,
-     h5,
-     h6 {
-         color: #71266E;
-         font-family: "Rock Salt", cursive, sans-serif;
-         line-height: .4em;
-     }
-     
-     #p2 {
-         color: #294F6D;
-     }
-     
-     #content {
-         width: 960px;
-         margin: auto;
-     }
-     
-     #section3 {
-         text-align: center;
-     }
-     
-     p {
-         font-family: Arial, Helvetica, sans-serif;
-     }
-     
-     #column1 {
-         width: 48%;
-         flex: 1 0 15em;
-         margin: .5em;
-         float: left;
-     }
-     
-     #column2 {
-         width: 48%;
-         flex: 1 0 15em;
-         margin: .5em;
-         float: right;
-     }
-     
-     #section1,
-     #section2 {
-         display: flex;
-     }
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt');
+nav {
+    background-color: #93A537;
+    color: #294F6D;
+    font-size: 1.12em;
+}
+
+#logo {
+    float: left;
+    margin-left: 20px;
+    margin-right: -20px;
+    background-color: white;
+    position: relative;
+    border-style: solid;
+    width: 114px;
+    border-color: #71266E;
+    margin-top: -10px;
+    margin-bottom: -20px;
+}
+
+#facebook {
+    margin-right: 1px;
+    float: left;
+}
+
+#instagram {
+    margin-left: 1px;
+    margin-right: 1px;
+    float: left;
+}
+
+#youtube {
+    margin-left: 1px;
+    margin-right: 1px;
+    float: left;
+}
+
+#copyright {
+    text-align: center;
+    line-height: 63px;
+    vertical-align: middle;
+    padding-right: 175px;
+}
+
+#headerpic {
+    width: 100%;
+}
+
+a {
+    color: #294F6D;
+    text-decoration: none;
+}
+
+nav a:link nav a:visited {
+    color: #294F6D;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #294F6D;
+    color: #93A537;
+}
+
+nav a {
+    text-align: center;
+    display: block;
+    line-height: 5em;
+}
+
+#section2 {
+    background-color: #93A537;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    line-height: 5.5em;
+    flex-flow: row wrap;
+}
+
+nav li {
+    flex: 1 1 8em;
+}
+
+#img2 {
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-bottom: 2px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #71266E;
+    font-family: "Rock Salt", cursive, sans-serif;
+    line-height: .4em;
+    text-align: center;
+}
+
+#p2 {
+    color: #294F6D;
+}
+
+#content {
+    width: 960px;
+    margin: auto;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: #294F6D;
+}
+
+.parent {
+    float: left;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 300px;
+}
+
+
+}
+.image1 {
+    position: relative;
+    padding-top: 10px;
+    top: 0;
+    left: 0;
+}
+.image2 {
+    position: absolute;
+    padding-top: 178px;
+    top: 0;
+    left: 0;
+}
+#column1 {
+    width: 48%;
+    flex: 1 0 15em;
+    margin: .5em;
+    float: left;
+}
+#column2 {
+    width: 48%;
+    flex: 1 0 15em;
+    margin: .5em;
+    float: right;
+}
+#column4 {
+    width: 50%;
+    margin: .5em;
+    float: left;
+}
+#section1,
+#section2,
+#section5 {
+    display: flex;
+}
+#reserve,
+#dates {
+    margin-left: 200px;
+    margin-right: 200px;
+}
+#booking {
+    margin-top: 30px;
+}
+#august1 {
+    margin-left: 240px;
+    margin-bottom: 10px;
+    padding-right: 10px;
+}
+#section7 {
+    background-color: #93A537;
+    width: 700px;
+}
